# Eng_report_template

./: .gitignore  LICENSE  README.md  _quarto.yaml  pyproject.toml  report.ipynb
notebooks/: report_jl.ipynb  report_py.ipynb
